--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -130,6 +130,7 @@ bind = $mainMod CTRL, P, pseudo # dwindle
 bind = $mainMod, J, togglesplit # dwindle
 bind = $mainMod SHIFT, P, exec, ~/.config/hypr/scripts/logout.sh
 bind = ,Print, exec, slurp | grim -g - - | wl-copy
+bind = SHIFT, Print, exec, hyprpicker | wl-copy
 
 # Function Keys Binding
 bind = ,XF86AudioLowerVolume, exec, pamixer -ud 2
