--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,1 +1,5 @@
-font_size 16.0
+font_size           18.0
+font_family         PxPlus_IBM_VGA8
+bold_font           auto
+italic_font         auto
+bold_italic_font    auto
