disabled default bg and added swaybg

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -5,15 +5,13 @@ monitor=eDP-1,2256x1504,0x0,1.0
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
- exec-once = waybar & hyprpaper
-
-# Source a file (multi-file configs
-# source = ~/.config/hypr/bios.conf
+ exec-once = waybar
+ exec-once = swaybg -c "#AAAAAA"
 
 # Set programs that you use
 $terminal = kitty
 
-# Some default env vars.
+# Some default env vars. 
 env = XCURSOR_SIZE,12
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 
@@ -100,6 +98,8 @@ gestures {
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_splash_rendering = 1
+    disable_hyprland_logo = 1
 }
 
 # Example per-device config
