--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,5 @@
 font_size           18.0
 font_family         PxPlus_IBM_VGA8
-bold_font           auto
-italic_font         auto
-bold_italic_font    auto
+bold_font           PxPlus_IBM_VGA8 bold
+italic_font         PxPlus_IBM_VGA8 italic
+bold_italic_font    PxPlus_IBM_VGA8 bold italic
