fixed swaybg and removed problematic code

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -5,8 +5,7 @@ monitor=eDP-1,2256x1504,0x0,1.0
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
- exec-once = waybar
- exec-once = swaybg -c "#AAAAAA"
+ exec-once = waybar & swaybg -c "#AAAAAA" &
 
 # Set programs that you use
 $terminal = kitty
@@ -102,33 +101,18 @@ misc {
     disable_hyprland_logo = 1
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic-mouse-v1 {
-    sensitivity = -0.5
-}
-
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
-
-
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, kitty
 bind = $mainMod SHIFT, C, killactive
-bind = $mainMod SHIFT, E, exit
 bind = $mainMod, V, togglefloating
 bind = $mainMod, D, exec, rofi -show drun
 bind = $mainMod, P, exec, rofi -show run
 bind = $mainMod CTRL, P, pseudo # dwindle
 bind = $mainMod, J, togglesplit # dwindle
-bind = $mainMod SHIFT, P, exec, ~/.config/hypr/scripts/logout.sh
+bind = $mainMod SHIFT, P, exec, ~/.config/hypr/scripts/wlogout.sh
 bind = ,Print, exec, slurp | grim -g - - | wl-copy
 bind = SHIFT, Print, exec, hyprpicker | wl-copy
 
