moved startup to external script

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -5,7 +5,7 @@ monitor=eDP-1,2256x1504,0x0,1.0
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
- exec-once = waybar & swaybg -c "#AAAAAA" &
+exec-once = ~/.config/hypr/scripts/on-start.sh
 
 # Set programs that you use
 $terminal = kitty
