--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,5 @@
 font_size           18.0
 font_family         PxPlus IBM VGA8
-bold_font           PxPlus IBM VGA8 Bold
-italic_font         PxPlus IBM VGA8 Italic
-bold_italic_font    PxPlus IBM VGA8 Bold Italic
+bold_font           PxPlus IBM VGA8
+italic_font         PxPlus IBM VGA8
+bold_italic_font    PxPlus IBM VGA8
