--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,91 @@
-font_size           18.0
-font_family         PxPlus IBM VGA8
-bold_font           PxPlus IBM VGA8
-italic_font         PxPlus IBM VGA8
-bold_italic_font    PxPlus IBM VGA8
+# vim:fileencoding=utf-8:foldmethod=marker
+
+
+#: Fonts {{{
+
+font_size               18.0
+font_family             PxPlus IBM VGA8
+bold_font               PxPlus IBM VGA8
+italic_font             PxPlus IBM VGA8
+bold_italic_font        PxPlus IBM VGA8
+
+#: }}}
+
+
+#: Cursor {{{
+
+cursor                  #FFFFFF
+cursor_blink_interval   0
+
+#: }}}
+
+
+#: Scrollback {{{
+
+scrollback_lines        2000
+wheel_scroll_multiplier 5.0
+wheel_scroll_min_lines  1
+touch_scroll_multiplier 1.0
+
+#: }}}
+
+
+#: Mouse {{{
+
+url_style               curly
+open_url_with           default
+url_prefixes            file ftp ftps gemini git gopher http https irc ircs kitty mailto news sftp ssh
+detect_urls             yes
+copy_on_select          yes
+
+mouse_map               middle release ungrabbed no_op
+mouse_map               middle release grabbed no_op
+
+#: }}}
+
+
+#: Performance {{{
+
+sync_to_monitor         yes
+
+#: }}}
+
+
+#: Terminal bell {{{
+
+enable_audio_bell       no
+visual_bell_duration    0.0
+window_alert_on_bell    yes
+command_on_bell         none
+bell_path               none
+
+#: }}}
+
+
+#: Colour Scheme {{{
+
+background_opacity      1.0
+
+foreground              #0000AA
+background              #AAAAAA
+
+color0                  #000000
+color8                  #555555
+color1                  #AA0000
+color9                  #FF5555
+color2                  #00AA00
+color10                 #55FF55
+color3                  #AA5500
+color11                 #FFFF55
+color4                  #0000AA
+color12                 #5555FF
+color5                  #AA00AA
+color13                 #FF55FF
+color6                  #00AAAA
+color14                 #55FFFF
+color7                  #AAAAAA
+color15                 #FFFFFF
+
+#: }}}
+
+
