--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -35,10 +35,10 @@ general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 0
-    gaps_out = 0
-    border_size = 0
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    gaps_out = 8
+    border_size = 4
+    col.active_border = rgba(0000aaff)
+    col.inactive_border = rgba(0000aaff)
 
     layout = dwindle
 
@@ -52,15 +52,12 @@ decoration {
     rounding = 0
     
     blur {
-        enabled = true
+        enabled = false
         size = 3
         passes = 1
     }
 
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    drop_shadow = no
 }
 
 animations {
