update hyprland for new waybar

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -6,6 +6,7 @@ monitor=eDP-1,2256x1504,0x0,1.0
 
 # Execute your favorite apps at launch
 exec-once = ~/.config/hypr/scripts/on-start.sh
+exec-once = waybar
 
 # Set programs that you use
 $terminal = kitty
