Revert "changed critical battery level"
This reverts commit 6d76386b52502f8a9095601b5abd3b11eb47d230.

--- a/waybar/topbar/config.jsonc
+++ b/waybar/topbar/config.jsonc
@@ -37,7 +37,8 @@
     "battery": {
         "interval": 10,
         "states": {
-            "critical": 10
+            "warning": 130,
+            "critical": 100
         },
         // Connected to AC
         "format": "Charging: {capacity}%",
